fix: fix wrong methods